# mcp-liquidation-map

./: .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.dockerfile  Dockerfile.txt  LICENSE  README.md  fastmcp_server.py  liquidation_map_mcp_server.py  main.py  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  smithery.yaml  smithery_entry.py  test_mcp_server.py
.github/workflows/: ci.yml
.smithery/: build.yaml  deploy.yaml
marshmallow/: __init__.py  exceptions.py  fields.py  schema.py
src/: config.py  main.py  server.py
src/database/migrations/: alembic.ini
src/mcp_liquidation_map/: __init__.py  config.py  main.py  server.py
src/mcp_liquidation_map/database/migrations/: env.py
src/mcp_liquidation_map/routes/: crypto.py  user.py
src/mcp_liquidation_map/services/: browsercat_client.py
src/routes/: crypto.py  user.py
src/services/: browsercat_client.py
src/static/: index.html
tests/: __init__.py  conftest.py  test_browsercat_client.py  test_capture_heatmap.py  test_config.py  test_crypto_price.py  test_crypto_routes.py  test_logging_config.py  test_user_routes.py
