[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-liquidation-map"
version = "0.1.0"
description = "Crypto liquidation heatmap MCP server"
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["src", "marshmallow"]
