[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-liquidation-map"
version = "0.1.0"
description = "Crypto liquidation heatmap MCP server with Flask and Smithery integration."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.14.0",
    "blinker==1.9.0",
    "certifi==2025.7.14",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "Flask==3.1.1",
    "Flask-Migrate==4.0.7",
    "Flask-SQLAlchemy==3.1.1",
    "greenlet==3.2.3",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "Mako==1.3.7",
    "MarkupSafe==3.0.2",
    "requests==2.32.4",
    "SQLAlchemy==2.0.41",
    "urllib3==2.5.0",
    "Werkzeug==3.1.3",
    "mcp>=1.15.0",
    "smithery>=0.4.2",
    "pydantic>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.7.1",
    "pytest>=8.3.4",
]

[project.scripts]
dev = "smithery.cli.dev:main"
playground = "smithery.cli.playground:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["mcp_liquidation_map*", "marshmallow*"]

[tool.setuptools]
py-modules = ["smithery_entry"]

[tool.setuptools.package-data]
"src" = [
    "static/*",
    "static/**/*",
    "database/*.db",
]

[tool.smithery]
server = "smithery_entry:create_server"

[tool.pytest.ini_options]
pythonpath = [".", "src"]
